force-app/main/default/objects/Expense__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <label>Approved Amount</label>
    <summarizedField>Expense_Line_Item__c.Approved_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Line_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>