force-app/main/default/objects/Expense__c/fields/Duration_From__c.field-meta.xml
<CustomField>
    <fullName>Duration_From__c</fullName>
    <label>Duration From</label>
    <type>Date</type>
</CustomField>