force-app/main/default/objects/Expense__c/fields/Duration_To__c.field-meta.xml
<CustomField>
    <fullName>Duration_To__c</fullName>
    <label>Duration To</label>
    <type>Date</type>
</CustomField>