force-app/main/default/objects/Expense__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <formula>Owner:User.Employee_Code__c</formula>
    <label>Employee Code</label>
    <type>Text</type>
</CustomField>