force-app/main/default/objects/Expense__c/fields/Internal_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Approval_Status__c</fullName>
    <defaultValue>&quot;Request not submitted&quot;</defaultValue>
    <label>Internal Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expense_Approval_Status</valueSetName>
    </valueSet>
</CustomField>