force-app/main/default/objects/Expense__c/fields/No_of_days__c.field-meta.xml
<CustomField>
    <fullName>No_of_days__c</fullName>
    <formula>Duration_To__c-Duration_From__c</formula>
    <label>No. of days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>