force-app/main/default/objects/Expense__c/fields/Primary_Expense__c.field-meta.xml
<CustomField>
    <fullName>Primary_Expense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Expense</label>
    <type>Checkbox</type>
</CustomField>