force-app/main/default/objects/Expense__c/fields/Resubmission_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_Allowed__c</fullName>
    <label>Resubmission Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>