force-app/main/default/objects/Expense__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cab - Ola/Uber/Rapido</fullName>
                <default>true</default>
                <label>Cab - Ola/Uber/Rapido</label>
            </value>
            <value>
                <fullName>Cab - Office Hire</fullName>
            </value>
            <value>
                <fullName>Cab</fullName>
            </value>
            <value>
                <fullName>2 Wheeler - Shared service</fullName>
            </value>
            <value>
                <fullName>Own 2 Wheeler</fullName>
            </value>
            <value>
                <fullName>Own 4 Wheeler</fullName>
            </value>
            <value>
                <fullName>Bus - Local</fullName>
            </value>
            <value>
                <fullName>Bus - Intercity</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Air Ticket</fullName>
            </value>
            <value>
                <fullName>Auto / Shared Auto</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Local Train</fullName>
            </value>
            <value>
                <fullName>Ferry</fullName>
            </value>
            <value>
                <fullName>Toll Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>