force-app/main/default/objects/Expense__c/fields/Total_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense__c</fullName>
    <label>Total Expense</label>
    <summarizedField>Expense_Line_Item__c.Expense_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Line_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>