force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Visit__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Approved_Amount__c</columns>
    <columns>Total_Expense__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>